k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fm-chain
  labels:
    app: fm-chain
