k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fm-chain-service
  namespace: fm-chain
  labels:
    app: fm-chain
spec:
  selector:
    app: fm-chain
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
